# mikan-todo-app

./: .env  .gitignore  LICENSE  README.md  compose.yaml  jsconfig.json  main.py  next.config.js  package-lock.json  package.json
.storybook/: main.ts
backend/: Dockerfile  pyproject.toml
backend/api/: auth.py  config.py  db.py  main.py  migrate_db.py  oauth.py
backend/api/cruds/: item.py  task.py  user.py
backend/api/models/: item.py  tag.py  task.py  user.py
backend/api/routers/: auth.py  item.py  oauth.py  task.py  user.py
backend/api/schemas/: auth.py  item.py  oauth.py  task.py  user.py
fastAPI_MySQL/: .env  Dockerfile  compose.yaml  pyproject.toml
fastAPI_MySQL/api/: .env  db.py  main.py  migrate_db.py
fastAPI_MySQL/api/cruds/: done.py  task.py
fastAPI_MySQL/api/models/: task.py
fastAPI_MySQL/api/routers/: done.py  task.py
fastAPI_MySQL/api/schemas/: task.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/.next/: trace
public/: manifest.json  sw.js  sw.js.map
src/api/: TodoApi.tsx
src/app/: globals.css  layout.js  manifest.js  mikanTasks.jsx  page.js  page.jsx  page.tsx  page_tasks.tsx  taskList.js  todoHandlerContext.tsx  todoProvider.tsx
src/data/: todos.json
src/stories/: DropDownModal.stories.tsx  DropDownModal.tsx  LanguageContext.tsx  LanguageContextType.tsx  LanguageProvider.tsx  MainMenu.stories.tsx  MainMenu.tsx  MainMenuItem.stories.tsx  MainMenuItem.tsx  MainMenuItemProps.tsx  MainMenuItemWithIcon.stories.tsx  MainMenuItemWithIcon.tsx  MainMenuItemWithIconProps.tsx  MainMenuProps.tsx  TaskDescription.tsx  (+18 more)
(+40 files in other folders)
