[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
